--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.246, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-863.4KB/s(Youtube:不良林), server: 14.152.92.77, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-266.1KB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
-  - {name: 🇨🇦 加拿大-375.9KB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
-  - {name: 🇨🇳 中国-596.2KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.238, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇫🇷 法国-1.71MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-790.9KB/s(Youtube:不良林), server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-868.0KB/s(Youtube:不良林), server: 42.157.195.246, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇰🇷 韩国-2.58MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-755.1KB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-997.4KB/s(Youtube:不良林), server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇺🇸 美国-316.9KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
   - {name: 🇨🇳 中国-737.3KB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇸🇬 新加坡-396.2KB/s(Youtube:不良林), server: sg1.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg1.v2yyds.cc, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-755.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-737.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-396.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-755.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-737.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-396.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-755.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-737.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-396.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-755.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-737.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-396.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-755.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-737.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-396.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-755.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-737.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-396.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-755.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-737.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-396.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
